--- a/GCUrefined/src/gcurefined/GCUbake.form
+++ b/GCUrefined/src/gcurefined/GCUbake.form
@@ -270,7 +270,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
-                              <Component id="jButton4" min="-2" pref="264" max="-2" attributes="0"/>
+                              <Component id="btnUpdateprogress" min="-2" pref="264" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="97" max="-2" attributes="0"/>
                               <Component id="btncancel_lesson" min="-2" pref="234" max="-2" attributes="0"/>
                           </Group>
@@ -292,7 +292,7 @@
                       <Component id="jScrollPane3" min="-2" pref="329" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jButton4" pref="34" max="32767" attributes="0"/>
+                          <Component id="btnUpdateprogress" pref="34" max="32767" attributes="0"/>
                           <Component id="btncancel_lesson" pref="34" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace pref="15" max="32767" attributes="0"/>
@@ -316,7 +316,8 @@
                 <Component class="javax.swing.JTable" name="tableCustomer">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="5" rowCount="4">
+                      <Table columnCount="6" rowCount="4">
+                        <Column editable="true" title="LessonID" type="java.lang.Object"/>
                         <Column editable="true" title="Lesson" type="java.lang.Object"/>
                         <Column editable="true" title="Date" type="java.lang.Object"/>
                         <Column editable="true" title="Time" type="java.lang.Object"/>
@@ -351,6 +352,11 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                       </TableColumnModel>
                     </Property>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
@@ -360,12 +366,12 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="jButton4">
+            <Component class="javax.swing.JButton" name="btnUpdateprogress">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Update"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateprogressActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JToggleButton" name="btncancel_lesson">
