--- a/GCUrefined/src/gcurefined/GCUbake.form
+++ b/GCUrefined/src/gcurefined/GCUbake.form
@@ -59,6 +59,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JTabbedPane" name="jTabbedPane1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Menlo" size="18" style="1"/>
+        </Property>
+      </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
@@ -252,8 +257,8 @@
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="View Progress">
-                <Property name="tabTitle" type="java.lang.String" value="View Progress"/>
+              <JTabbedPaneConstraints tabName="Progress">
+                <Property name="tabTitle" type="java.lang.String" value="Progress"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
